# egb

./: CMakeLists.txt  README.md
include/egb/: defines.hpp
include/egb/gb/: cartridge.hpp  system.hpp
include/egb/utils/: utils.hpp
include/egb/z80/: cpu.hpp  instruction.hpp  memory.hpp  mmu.hpp  register.hpp
src/: main.cpp
src/gb/: cartridge.cpp  system.cpp
src/utils/: utils.cpp
src/z80/: cpu.cpp  instruction.cpp  memory.cpp  mmu.cpp  register.cpp
src/z80/instructions/: cb-ops.cpp  ld_n_nn.cpp  sbc_A_r.cpp  sla_n.cpp  template.cpp
